@@ -29,6 +29,7 @@ Added some planet satellites.
 Improved optimization using gprof.
 Finally fixed the planet shaking bug!
 Updated fog and decor displaying (faster and nicer)
+Added a projector class which will handle different projection mode (fisheye, ortho etc..)
 
 0.5.2 [29/04/2003]
 Changed the configuration file to $HOME/.stellarium/VERSION/ on unix system to prevent conflicts between versions.
